--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
-npm {
+{
   "name": "project2",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "jest",
     "start": "node server.js",
+    "watch": "nodemon server.js",
     "lint": "eslint . ./**/*.js --fix"
   },
   "repository": {
@@ -18,11 +19,16 @@ npm {
   },
   "homepage": "https://github.com/FlashOTFR/project2#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "eslint": "^6.8.0",
     "express": "^4.17.1",
-    "mysql": "^2.18.1",
+    "express-handlebars": "^3.1.0",
+    "mysql2": "^2.1.0",
+    "path": "^0.12.7",
     "sequelize": "^5.21.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  },
   "description": ""
 }
