--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sequelize": "^5.21.5"
   },
   "devDependencies": {
+    "handlebars": "^4.5.0",
     "nodemon": "^2.0.2"
   },
   "description": ""
