--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "eslint": "^6.8.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
-    "handlebars": "^4.5.0",
+    "handlebars": "^4.7.3",
     "mysql2": "^2.1.0",
     "path": "^0.12.7",
     "sequelize": "^5.21.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "sequelize-mock": "^0.10.2"
   },
   "description": ""
 }
