--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "handlebars": "^4.7.3",
+    "jest": "^25.1.0",
     "mysql2": "^2.1.0",
     "path": "^0.12.7",
     "sequelize": "^5.21.5"
