--- a/config/config.json
+++ b/config/config.json
@@ -15,7 +15,7 @@
   },
   "production": {
     "username": "root",
-    "password": "5eku+aya",
+    "password": "password",
     "database": "character_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
