moved all html routes into server.js.  wrote api routes for put, delete and post.  started writing controller for on clicks.

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "Issouf03",
+    "password": "5eku+aya",
     "database": "character_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
